@@ -1,3 +1,12 @@
+2011-03-20 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/ds390/gen.c (movc, toCarry): replaced movc with toCarry,
+	  (genNot, genSend, genRet): used toCarry,
+	  (genAnd, genOr, genXor): fixed bug 3223041
+	* src/mcs51/gen.c (toCarry): handle IS_OP_ACCUSE,
+	  (genCmpEq, genAnd, genOr, genXor): fixed bug 3223041
+	* support/regression/tests/bug3223041.c: new, added
+
 2011-03-20 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCmain.c, src/SDCCmacro.c, src/SDCCmacro.h, src/SDCCutil.c,
